# orderbook-delta-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  positions.csv  settings-example.json  settings.json
orderbook-delta-visualizer/: .gitignore  README.md  ftx_websocket_client.py  orderbook_delta_strategies.py  orderbook_delta_visualizer.py  parameters.py  pyproject.toml  strategy.py
orderbook-delta-visualizer/src/: ftx_websocket_client.py  ftx_websocket_manager.py  orderbook_delta_visualizer.py
src/: helpers.rs  main.rs  order_handler.rs  tests.rs
