[package]
name = "orderbook-delta-bot"
version = "0.3.1"
authors = ["Dinesh Pinto"]
edition = "2021"
description = "A simple Rust trading bot to counter trade deviations in the futures orderbook."
keywords = ["trading-bot", "cryptocurrency"]
license = "Apache-2.0"
repository = "https://github.com/dineshpinto/orderbook-delta-bot"


[dependencies]
ftx = "0.4.3"
tokio = { version = "1.17.0",  features = ["full"] }
rust_decimal = "1.22.0"
ta = "0.5.0"
csv = "1.1.6"
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"
log = "0.4.16"
env_logger = "0.9.0"
dotenv = "0.15.0"
futures = "0.3"