[tool.poetry]
name = "orderbook-delta-visualizer"
version = "0.1.0"
description = "A GUI visualizer in Python for orderbook-delta-bot"
authors = ["dineshpinto <dkpinto95@gmail.com>"]
license = "Apache-v2"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
pandas-ta = "^0.3.14-beta.0"
plotly = "^5.9.0"
ftx = "^1.2.0"
dash = "^2.5.1"
gevent = "^21.12.0"
websocket = "^0.2.1"
websocket-client = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
